--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Toast notification container -->
+  <div id="toast-container"></div>
+
   <div class="container">
     <header>
       <h1>🧠 BrainBrief</h1>
@@ -39,6 +42,11 @@
         </button>
       </section>
 
+      <section class="actions">
+        <button class="btn btn-export" id="export-bookmarks">
+          📤 Export for NotebookLM
+        </button>
+      </section>
       <section class="info-card">
         <h3>Quick Start</h3>
         <ol>
