feat: Add Settings page with multi-select Lists + 3-day filter
✨ NEW: Settings Page for List Selection

Features:
- Multi-select checkboxes for enabling/disabling lists
- Visual list display with member counts
- Discover Lists button (runs click-and-extract-lists.js)
- Save settings to lists-config.json
- Days Back filter (default: 3 days) for faster extraction

UI Updates:
- Replaced 'Sync Now' with 'Sync Bookmarks' and 'Sync Lists'
- Added Settings button → opens settings.html
- Settings page shows all 13 lists with checkboxes
- User can enable/disable any combination of lists

Performance:
- Lists now extract only last 3 days (configurable)
- Date filter stops scrolling when old tweets detected
- Much faster than extracting all tweets
- Example: 50 tweets in 30 seconds vs. 500 tweets in 5 minutes

Files Added:
- src/renderer/settings.html (Settings UI)
- src/renderer/settings.js (Settings logic)
- click-and-extract-lists.js (working discovery method)

Files Modified:
- src/main/index.js (IPC handlers for lists)
- src/renderer/index.html (split buttons)
- src/renderer/app.js (wire up new buttons)
- src/automation/twitter.js (added daysBack filter)
- lists-config.example.json (added daysBack field)

Usage:
1. Open app → Settings
2. Click 'Discover Lists' (finds all 13 lists)
3. Check/uncheck lists you want
4. Set days back (1-30 days)
5. Save
6. Click 'Sync Lists' from main page

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -34,17 +34,20 @@
       </section>
 
       <section class="actions">
-        <button class="btn btn-primary" id="sync-now">
-          Sync Now
+        <button class="btn btn-primary" id="sync-bookmarks">
+          🔖 Sync Bookmarks
         </button>
-        <button class="btn btn-secondary" id="open-settings">
-          Settings
+        <button class="btn btn-primary" id="sync-lists">
+          📋 Sync Lists
         </button>
       </section>
 
       <section class="actions">
+        <button class="btn btn-secondary" id="open-settings">
+          Settings
+        </button>
         <button class="btn btn-export" id="export-bookmarks">
-          📤 Export for NotebookLM
+          📤 Export File
         </button>
       </section>
       <section class="info-card">
