--- a/src/renderer/settings.html
+++ b/src/renderer/settings.html
@@ -99,9 +99,9 @@
         <div class="list-item">
           <div class="list-info">
             <div class="list-name">Days Back</div>
-            <div class="list-meta">Only extract tweets from last N days (faster!)</div>
+            <div class="list-meta">Only extract tweets from last N days (default: 1 = 24 hours)</div>
           </div>
-          <input type="number" id="days-back" value="3" min="1" max="30" style="width: 80px; padding: 8px;">
+          <input type="number" id="days-back" value="1" min="1" max="30" style="width: 80px; padding: 8px;">
         </div>
       </section>
     </main>
