feat: Track YouTube count + show NotebookLM connection status
YouTube Tracking:
- Added query to uploaded_urls table in getStats()
- Counts DISTINCT YouTube URLs uploaded
- Saves YouTube URLs to database after successful upload
- UI now shows real YouTube count (not hardcoded 0)

Google Account Display:
- Shows "NotebookLM: Connected" in header when synced
- Green color when connected, gray when not
- Simple connection indicator
- TODO: Detect actual email (for now shows Connected/Not connected)

Database:
- uploaded_urls table now tracks all YouTube uploads
- INSERT OR IGNORE prevents duplicates
- youtube_count added to stats query result

UI Updates:
- Google account status in header
- YouTube count dynamically updates
- Stats refresh after sync shows new counts

Test: Sync bookmarks with YouTube → see count increment

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -14,6 +14,7 @@
     <header>
       <h1>🧠 BrainBrief</h1>
       <p class="subtitle">Twitter → NotebookLM • Auto-Transcribe YouTube Videos</p>
+      <p class="google-account" id="google-account">NotebookLM: <span id="google-email">Not connected</span></p>
     </header>
 
     <main>
