feat: Complete account management - Show email + Switch Account + Reset
🎯 MAJOR UX IMPROVEMENT: Full Account Management

Account Detection:
- Detects which Google account is logged in to NotebookLM
- Shows actual email in UI header
- Shows in Account Management section
- Auto-detects on app start
- Refreshes every 2 minutes

Switch Account:
- "Switch Account" button logs out of current Google account
- Deletes browser-data/ (saved login)
- Next sync prompts for Google login
- User can choose different account
- Confirmation dialog explains what happens

Reset Database:
- "Reset Sync History" button clears database
- Double confirmation (destructive action)
- Keeps Lists config and logins
- Use when NotebookLM notebooks deleted manually
- Allows fresh upload to new notebooks

UI Components:
- Account Management section at bottom
- Shows current Google account email
- Switch Account button (secondary)
- Danger Zone (red background)
- Reset Database button (red, prominent warnings)

User Flow:
1. Open app → See which Google account is active
2. Want to switch? → Click Switch Account → Log out → Re-sync with new account
3. Deleted notebooks? → Click Reset Database → Re-sync everything fresh

Implementation:
- account-manager.js module (detectGoogleAccount, clearBrowserSession, resetDatabase)
- IPC handlers: get-google-account, switch-account, reset-database
- Headless browser detection (fast, non-intrusive)
- Confirmation dialogs prevent accidental resets

This solves: "Which account am I using?" mystery!

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -56,6 +56,35 @@
         </div>
       </section>
 
+      <!-- Account Management Section -->
+      <section class="account-section">
+        <div class="section-header">
+          <h3>⚙️ Account & Settings</h3>
+        </div>
+        
+        <div class="account-card">
+          <div class="account-info">
+            <div class="account-label">Google Account (NotebookLM)</div>
+            <div class="account-email" id="account-email-display">Detecting...</div>
+          </div>
+          <button class="btn btn-secondary" id="switch-account-btn">
+            🔄 Switch Account
+          </button>
+        </div>
+        
+        <div class="danger-zone">
+          <div class="danger-header">
+            <h4>⚠️ Danger Zone</h4>
+          </div>
+          <div class="danger-content">
+            <p>Reset if you deleted NotebookLM notebooks or want fresh start</p>
+            <button class="btn btn-danger" id="reset-database-btn">
+              🗑️ Reset Sync History
+            </button>
+          </div>
+        </div>
+      </section>
+
       <!-- Footer Actions -->
       <section class="footer-actions">
         <button class="btn btn-link" id="view-logs">📖 View Logs</button>
@@ -64,7 +93,7 @@
     </main>
 
     <footer>
-      <p>v1.3.0 • <a href="#" id="view-logs">Logs</a> • Auto-Transcribes YouTube Videos ✨</p>
+      <p>v1.3.0 • Auto-Transcribes YouTube Videos ✨</p>
     </footer>
   </div>
 
