perf: Limit first sync to 100 bookmarks for fast onboarding
UX Improvement - Fast First-Time Experience

The Problem:
- First-time users click Sync Bookmarks
- Extracts ALL 500 bookmarks (10+ minutes)
- Bad onboarding experience
- Users think it's broken

The Solution:
- Detect if first sync (total_bookmarks === 0)
- Limit first sync to 100 bookmarks (~2 minutes)
- Future syncs use incremental (only new, ~30 seconds)

Implementation:
- Check database stats before sync
- If 0 bookmarks → first sync → limit to 100
- If bookmarks exist → incremental sync → only new ones
- Onboarding UI explains this to user

User Experience:
- Onboarding: "First sync: Latest 100 bookmarks (~2 minutes)"
- Shows expectation clearly
- Fast success on first try
- Future syncs: "Only new bookmarks (~30 seconds) ⚡"

Benefits:
- ✅ Fast onboarding (2 min vs 10 min)
- ✅ Users see success quickly
- ✅ Still get recent content (100 bookmarks is plenty)
- ✅ Can manually run full sync later if needed
- ✅ Daily syncs are incremental (only new)

Test Connection:
- Onboarding test: Extract 10 bookmarks (just verify login)
- First main sync: Extract 100 bookmarks (useful content)
- Future syncs: Incremental (only new)

This is proper onboarding UX!

--- a/src/renderer/onboarding.html
+++ b/src/renderer/onboarding.html
@@ -168,9 +168,12 @@
         </div>
       </div>
       
-      <p style="font-size: 1rem; color: #666;">
-        Ready to sync your bookmarks! Click below to start.
-      </p>
+      <div style="background: #f0f9ff; padding: 20px; border-radius: 8px; margin: 20px 0;">
+        <p style="font-size: 0.95rem; color: #555; margin: 0;">
+          <strong>First Sync:</strong> We'll sync your latest 100 bookmarks (~2 minutes)<br>
+          <strong>Future Syncs:</strong> Only new bookmarks (~30 seconds) ⚡
+        </p>
+      </div>
       
       <button class="btn btn-primary big-button" id="finish-onboarding">
         Start Using BrainBrief →
