feat: Display active notebook name in bookmarks card
Shows which NotebookLM notebook is active:
- Added notebook name display to bookmarks card
- Shows: BrainBrief - Twitter Bookmarks - 2025-10-19
- Gray info box with blue notebook name
- IPC handler: get-active-notebook
- Updates after sync

User now knows exactly which notebook is being used.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -24,6 +24,10 @@
           <h2>🔖 Twitter Bookmarks</h2>
           <span class="last-sync" id="bookmarks-last-sync">Never synced</span>
         </div>
+        <div class="notebook-info">
+          <div class="notebook-name-label">NotebookLM Notebook:</div>
+          <div class="notebook-name" id="bookmarks-notebook-name">Not created yet</div>
+        </div>
         <div class="card-stats">
           <span id="bookmarks-count-stat">0</span> bookmarks •
           <span id="bookmarks-youtube-stat">0</span> YouTube videos transcribed
